diy-base/main/default/objects/Account/fields/FamilySize__c.field-meta.xml
<CustomField>
    <fullName>FamilySize__c</fullName>
    <label>FamilySize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>