diy-base/main/default/objects/Account/fields/GarageSize__c.field-meta.xml
<CustomField>
    <fullName>GarageSize__c</fullName>
    <label>GarageSize</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Double Car</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Oversized</fullName>
            </value>
            <value>
                <fullName>Single Car</fullName>
            </value>
            <value>
                <fullName>Triple Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>