diy-base/main/default/objects/Account/fields/IsSingleFamilyHome__c.field-meta.xml
<CustomField>
    <fullName>IsSingleFamilyHome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSingleFamilyHome</label>
    <type>Checkbox</type>
</CustomField>