diy-base/main/default/objects/Account/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>MaritalStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>