diy-base/main/default/objects/Account/fields/Person_Contact_ULI_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_ULI_Id__c</fullName>
    <formula>PersonContact.Customer_Unified_Individual_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Contact ULI Id</label>
    <type>Text</type>
</CustomField>