diy-base/main/default/objects/Account/fields/Service_Preference__c.field-meta.xml
<CustomField>
    <fullName>Service_Preference__c</fullName>
    <label>Service Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Do It For Me</fullName>
            </value>
            <value>
                <fullName>Do It Yourself</fullName>
            </value>
            <value>
                <fullName>Remote Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>