diy-base/main/default/objects/Account/fields/StorePreference__c.field-meta.xml
<CustomField>
    <fullName>StorePreference__c</fullName>
    <label>StorePreference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instore Pickup</fullName>
            </value>
            <value>
                <fullName>Curb Side Pickup</fullName>
            </value>
            <value>
                <fullName>Home Delivery</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>