diy-base/main/default/objects/Account/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <label>VehicleType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Coupe</fullName>
            </value>
            <value>
                <fullName>Minivan</fullName>
            </value>
            <value>
                <fullName>Pickup Truck</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>